# FAANG-Streamlit-App

./: main.py  pyproject.toml
